--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shuffle</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="main-container">
+      <div class="main-content">
+        <h1 class="title">BY CARDSTARTER</h1>
+        <img class="logo" src="./images/miami_logo.svg" alt="shuffle-logo" />
+        <div class="tokens">
+          <span class="insert-tokens">INSERT TOKENS</span>
+          <span class="insert-tokens">CREDITS 0</span>
+        </div>
+        <p class="credits">&copy; CardStarter 1983</p>
+      </div>
+    </div>
+  </body>
 </html>
